@@ -4,12 +4,12 @@
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<parent>
 		<groupId>org.cryptomator</groupId>
-		<artifactId>jfuse</artifactId>
-		<version>0.3.0-SNAPSHOT</version>
+		<artifactId>jfuse-parent</artifactId>
+		<version>0.8.0-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>jfuse-tests</artifactId>
-	<name>jFUSE Tests</name>
+	<name>jFUSE Integration Tests</name>
 	<description>Benchmark and Integration Tests</description>
 
 	<properties>
@@ -17,9 +17,30 @@
 	</properties>
 
 	<dependencies>
+		<!-- we need _direct_ dependencies in order for jacoco:report-aggregate to pick up coverage reports -->
 		<dependency>
 			<groupId>org.cryptomator</groupId>
 			<artifactId>jfuse-api</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.cryptomator</groupId>
+			<artifactId>jfuse-linux-aarch64</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.cryptomator</groupId>
+			<artifactId>jfuse-linux-amd64</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.cryptomator</groupId>
+			<artifactId>jfuse-mac</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.cryptomator</groupId>
+			<artifactId>jfuse-win</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
@@ -31,25 +52,25 @@
 		<dependency>
 			<groupId>com.github.serceman</groupId>
 			<artifactId>jnr-fuse</artifactId>
-			<version>0.5.7</version>
+			<version>0.5.8</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-simple</artifactId>
-			<version>2.0.0-alpha6</version>
+			<version>2.0.17</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.openjdk.jmh</groupId>
 			<artifactId>jmh-core</artifactId>
-			<version>1.34</version>
+			<version>1.37</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.openjdk.jmh</groupId>
 			<artifactId>jmh-generator-annprocess</artifactId>
-			<version>1.34</version>
+			<version>1.37</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
@@ -60,7 +81,10 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
-					<argLine>@{surefire.jacoco.args} -Djava.library.path=@{fuse.lib.path} --enable-native-access=ALL-UNNAMED --enable-preview</argLine>
+					<argLine>@{surefire.jacoco.args} --enable-native-access=ALL-UNNAMED -Djava.library.path=".:${java.library.path}"</argLine>
+					<systemPropertyVariables>
+						<fuse.lib.path>${fuse.lib.path}</fuse.lib.path>
+					</systemPropertyVariables>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -76,7 +100,10 @@
 							<includes>
 								<include>**/*IT.java</include>
 							</includes>
-							<argLine>@{failsafe.jacoco.args} -Djava.library.path=@{fuse.lib.path} --enable-native-access=ALL-UNNAMED --enable-preview</argLine>
+							<argLine>@{failsafe.jacoco.args} --enable-native-access=ALL-UNNAMED -Djava.library.path=".:${java.library.path}"</argLine>
+							<systemPropertyVariables>
+								<fuse.lib.path>${fuse.lib.path}</fuse.lib.path>
+							</systemPropertyVariables>
 						</configuration>
 					</execution>
 				</executions>
@@ -119,80 +146,5 @@
 			</plugin>
 		</plugins>
 	</build>
-
-	<profiles>
-		<profile>
-			<id>mac</id>
-			<activation>
-				<os>
-					<family>mac</family>
-					<arch>x86_64</arch>
-				</os>
-			</activation>
-			<properties>
-				<fuse.lib.path>/usr/local/lib</fuse.lib.path>
-			</properties>
-			<dependencies>
-				<dependency>
-					<groupId>org.cryptomator</groupId>
-					<artifactId>jfuse-mac</artifactId>
-					<version>${project.version}</version>
-				</dependency>
-			</dependencies>
-		</profile>
-
-		<profile>
-			<id>linux-amd64</id>
-			<activation>
-				<os>
-					<family>unix</family>
-					<name>Linux</name>
-					<arch>x86_64</arch>
-				</os>
-			</activation>
-			<dependencies>
-				<dependency>
-					<groupId>org.cryptomator</groupId>
-					<artifactId>jfuse-linux-amd64</artifactId>
-					<version>${project.version}</version>
-				</dependency>
-			</dependencies>
-		</profile>
-
-		<profile>
-			<id>linux-aarch64</id>
-			<activation>
-				<os>
-					<family>unix</family>
-					<name>Linux</name>
-					<arch>aarch64</arch>
-				</os>
-			</activation>
-			<dependencies>
-				<dependency>
-					<groupId>org.cryptomator</groupId>
-					<artifactId>jfuse-linux-aarch64</artifactId>
-					<version>${project.version}</version>
-				</dependency>
-			</dependencies>
-		</profile>
-
-		<profile>
-			<id>win-amd64</id>
-			<activation>
-				<os>
-					<family>windows</family>
-					<arch>amd64</arch>
-				</os>
-			</activation>
-			<dependencies>
-				<dependency>
-					<groupId>org.cryptomator</groupId>
-					<artifactId>jfuse-win-amd64</artifactId>
-					<version>${project.version}</version>
-				</dependency>
-			</dependencies>
-		</profile>
-	</profiles>
 
 </project>
